src/styles.scss
@import 'material-icons/iconfont/material-icons.css';
@import "~swiper/swiper-bundle";
html, body {
    height: 100%;
    margin: 0;
    overflow-x: hidden;
    max-width: 100vw;
    scrollbar-face-color:fuchsia;
    scrollbar-highlight-color:yellow;
    scrollbar-3dlight-color:orange;
    scrollbar-darkshadow-color:darkblue;
    scrollbar-shadow-color:gray;
    scrollbar-arrow-color:yellow;
    scrollbar-track-color:aqua;
}
@font-face {
  font-family: 'Axiforma';
  src: url('./assets/fonts/axiforma/Axiforma-Regular.ttf');
}

.zoom-on-hover {
  transition: transform 0.3s ease;
}


.zoom-on-hover:hover {
  transform: scale(1.1); /* Cambia el valor para controlar la cantidad de zoom */
}
.aa-product-rating{
  color: #ffc107 !important;
}
h1,
h2,
h3,
h4,
h5,
h6,
p,
span,
label,
a{
   //font-family: 'LaBelleAurore' !important;
   font-family: 'Inter', sans-serif;
   font-family: 'Maven Pro', sans-serif;
}

.headerColor{
  background: #02a0e3;
}

.colorNuevo{
  color: #02a0e3;
}

.anchandoPr{
  width: 60% !important;
  padding: 1px;
}

.anchosBanner{
  width: 100%;
  height: 165px;
}

.anchosProductos {
  max-height: 305px;
  max-width: 15pc;
  min-height: 225px;
  min-width: 10pc;
}


#anchosLi {
  width: 14pc !important;
}

.centerAncho{
  width: 20pc;
}

.pointer {
  cursor: pointer;
}
.icons {
    margin: 5px 5px 5px 15px;
}
.logo{
  height: 127px;
}
.imgFoto{
  height: 371px;
}

.titulo1{
  /*font-family: Geomanist;*/
  color: #17a8e5;
}

.titulo2{
  /*font-family: Geomanist2;*/
  font-size: 110%;
  color: #6c6c6c;
}

.mat-tab-header{
  background-color: #17a8e5;
}

.mat-tab-label {
  color: white;
}

.titulo3{
  /*font-family: Geomanist3;*/
  font-size: 110%;
  color: #fff;
}

.scrooll{
  position: inherit;
}

.ngxImageZoomThumbnail{
  width: 100% !important;
  object-fit: scale-down !important;
}

mat-sidenav-content{
  margin-left: 235px !important;
}


.pointer {
  cursor: pointer;
}
.icons {
    margin: 5px 5px 5px 15px;
}
.logo{
  height: 85px;
}
.imgFoto{
  height: 371px;
}
.mat-toolbar-row, .mat-toolbar-single-row {
  display: flex !important;
  box-sizing: border-box !important;
  padding: 0 16px !important;
  width: auto !important;
  flex-direction: row !important;
  align-items: center !important;
  white-space: nowrap !important;
}
.imgProductos{
  height: 193px;
  width: 170px;
  max-height: 269px;
  min-height: 227px;
  max-width: 628px;
}
.views1 {
  display: none;
}
.views2 {
  display: none;
}
.foto {
  height: 43px;
  width: 100%;
}
.ng-image-slider-lightbox{
  display: none !important;
}
.ngxImageZoomThumbnail{
  height: 406px;
  align-content: center;
}

/*.ngxImageZoomThumbnail {
  max-height: 425px !important;
  max-width: 407px !important;
  height: 219px !important;
  width: 100%;
}*/

footer {
  /*background: #02a0e3;
  position: fixed;
  bottom: 0px;
  width:  -webkit-fill-available;
  left: 0px;
  box-shadow: 5px 3px 5px 5px rgba(0,0,0,.14), 0 5px 8px 0 rgba(0,0,0,.14), 0 1px 14px 0 rgba(0,0,0,.12);*/
  padding: 0.5em;
  font-size: 11px;

}

.cdk-overlay-pane{
  max-width: 100% !important;
}
#cdk-overlay-0{
  max-width: 100% !important;
}

.anchos {
  padding: 5px 90px;
}

#wpf-loader-two {
  height: 100%;
  bottom: 0;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  width: 100%;
  z-index: 99999;
}

#wpf-loader-two .wpf-loader-two-inner {
  border: 2px solid #fff;
  border-radius: 50%;
  height: 100px;
  left: 46%;
  position: absolute;
  top: 40%;
  width: 100px;
  text-align: center;
}

#wpf-loader-two .wpf-loader-two-inner:before {
  content: "";
  height: 57%;
  left: -204px;
  position: absolute;
  top: -5px;
  transition: all 0.5s ease 0s;
  width: 200px;
  -webkit-animation-name: loader-two-before-transition;
  -webkit-animation-duration: 1.5s;
  -webkit-animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-name: loader-two-before-transition;
  animation-duration: 1.5s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

#wpf-loader-two .wpf-loader-two-inner:after {
  content: "";
  height: 57%;
  left: 104%;
  position: absolute;
  top: 50%;
  transition: all 0.5s ease 0s;
  width: 200px;
  -webkit-animation-name: loader-two-after-transition;
  -webkit-animation-duration: 1.5s;
  -webkit-animation-timing-function: linear;
  -webkit-animation-iteration-count: infinite;
  animation-name: loader-two-after-transition;
  animation-duration: 1.5s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

#wpf-loader-two .wpf-loader-two-inner span {
  color: #fff;
  display: inline-block;
  margin-top: 42%;
}

.anchandoPr{
  width: 46% !important;
}

.anchoReal12{
  width: 10%;
}

.anchos2{
  margin: 5px;
}

.contenedor-btn-file input[type="file"] {
  appearance: none;
  display: none;
  visibility: hidden;
  opacity: 0;
  z-index: -1;
}
.contenedor-btn-file {
  display: inline-block;
  position: relative;
  background-color: #186CC3;
  color: #fff;
  border: 0;
  padding: 12px 20px;
  border-radius: 8px;
  box-shadow: 0 0 12px rgba(0, 0, 0, .15);
  overflow: hidden;
  transition: ease-out 120ms background-color;
}
.contenedor-btn-file:hover {
  background-color: #16579B;
}
.contenedor-btn-file:active {
  background-color: #114378;
}
.contenedor-btn-file > i {
  margin-right: 15px;
}

.contenedor-btn-file label {
  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  top: 0;
  left: 0;
  cursor: pointer;
}

.contenedor-btn-file.bordeado {
  background-color: #fff;
  border: 2px solid #186CC3;
  color: #186CC3;
}
.contenedor-btn-file.bordeado:hover {
  background-color: #186CC3;
  color: #fff;
}

.mensaje a {
  color: inherit;
  margin-right: .5rem;
  display: inline-block;
}
.mensaje a:hover {
  color: #309B76;
  transform: scale(1.4)
}

.textInfo{
  font-size: 40px;
}

/*.ng-star-inserted{
  color: #3f51b5 !important;
}*/
/* ... */

